--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,11 @@ nav {
   height: 100px;
   margin-top: -10px;
   position: fixed;
+  margin: 0px auto;
   width: 100%;
 }
+
+
 
 section {
   margin: 0 auto;
@@ -31,6 +34,13 @@ h1 {
 
 h3 {
   font-size: 1.3em;
+}
+
+.color {
+  background-color: blue;
+  height: 100px;
+  margin: 10px 0;
+  width: 100%;
 }
 
 .element {
